--- a/Windows/ConventionWizardForUnity/CodeMaid.config
+++ b/Windows/ConventionWizardForUnity/CodeMaid.config
@@ -29,7 +29,7 @@
                 <value>False</value>
             </setting>
             <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Cleaning_InsertBlankLinePaddingBeforeRegionTags"
                 serializeAs="String">
